@@ -1,7 +1,6 @@
 parListModules <-
-function(cl) 
+function (cl) 
 {
     clusterEvalQ(cl, require(rjags))
-    clusterCall(cl, eval, list.modules(), env = .GlobalEnv)
+    clusterEvalQ(cl, list.modules())
 }
-
